# ai_agent_with_rag_on_fastapi_and_pgvector

./: README.md  main.py  pyproject.toml
core/: access_control.py  models.py  schmas.py
fast_api/core/: auth.py  deps.py  security.py
fast_api/routers/: admin_routes.py  ask_routes.py  auth_routes.py  document_route.py  user_routes.py
rag/core/: document_ingestion.py  embedder.py  generator.py
rag/pipeline/: ingest.py  query.py
rag/storage/: vector_store.py
